--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container mt-5" id="ticket">
         <h1 class="text-white text-center my_h1">IL TUO BIGLIETTO</h1>
         <div class="ticket-zone">
-            <h2 class="my_h2 mb-0">DETTAGLIO PASSEGGERI</h2>
+            <h2 class="my_h2">DETTAGLIO PASSEGGERI</h2>
             <table>
                 <colgroup>
                     <col span="1">
@@ -61,10 +61,10 @@
                 <tbody>
                 <tr>
                     <td></td>
-                    <td class="text-generated my_text" id="offerta"></td>
-                    <td class="text-generated my_text" id="carrozza"></td>
-                    <td class="text-generated my_text" id="codice-cp"></td>
-                    <td class="text-generated my_text" id="costo-biglietto"></td>
+                    <td class="text-generated" id="offerta"></td>
+                    <td class="text-generated" id="carrozza"></td>
+                    <td class="text-generated" id="codice-cp"></td>
+                    <td class="text-generated" id="costo-biglietto"></td>
                 </tr>
                 </tbody>
             </table>
