--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <!-- CALCOLA IL PREZZO DEL TUO BIGLIETTO -->
     <div class="container">
-        <h1 class="text-center text-white my_h1">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <h1 class="text-center text-white my_h1 col-12">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
         <form class="form-zone bg-white my-4" action="" method="get">
-            <div class="row">
-                <div class="fl-name col text-center">
-                    <label class="col-12 my_text" for="name">Nome e Cognome</label>
+            <div class="row justify-content-center">
+                <div class="fl-name col text-center mb-3">
+                    <label class="my_text" for="name">Nome e Cognome</label>
                     <input class="" type="text" placeholder="Inserisci il tuo nome" id="name" name="name">
                 </div>
-                <div class="distance col text-center">
-                    <label class="col-12 my_text" for="kms">Km da percorrere</label>
+                <div class="distance col text-center mb-3">
+                    <label class="my_text" for="kms">Km da percorrere</label>
                     <input class="" type="number" placeholder="Inserisci la distanza" id="kms" name="kms">
                 </div>
-                <div class="age col-auto text-center">
-                    <label class="col-12 my_text" for="">Fascia d'età</label>
+                <div class="age col text-center">
+                    <label class="my_text" for="">Fascia d'età</label>
                     <select class="" name="age-range" id="age-range">
                         <option id="minorenne" value="minorenne">Minorenne</option>
                         <option id="maggiorenne" value="maggiorenne">Maggiorenne</option>
@@ -36,38 +36,40 @@
                 <input class="col-auto btn my_btn me-4" type="button" id="generate" value="Genera">
                 <input class="col-auto btn my_btn" type="button" value="Annulla" id="discard">
             </div>
-        </form>
+        </form>      
     </div>
     <!-- IL TUO BIGLIETTO -->
     <div class="container mt-5" id="ticket">
-        <h1 class="text-white text-center my_h1">IL TUO BIGLIETTO</h1>
-        <div class="ticket-zone">
-            <h2 class="my_h2">DETTAGLIO PASSEGGERI</h2>
-            <table>
-                <colgroup>
-                    <col span="1">
-                </colgroup>
-                <thead>
+        <div class="row">
+            <h1 class="text-white text-center my_h1">IL TUO BIGLIETTO</h1>
+            <div class="ticket-zone">
+                <h2 class="my_h2">DETTAGLIO PASSEGGERI</h2>
+                <table class="mb-2">
+                    <colgroup>
+                        <col span="1">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th class="my_h2">NOME PASSEGGERO
+                                <div id="nome-passeggero"></div>
+                            </th>
+                            <th class="my_text">Offerta</th>
+                            <th class="my_text">Carrozza</th>
+                            <th class="my_text">Codice CP</th>
+                            <th class="my_text">Costo biglietto</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                     <tr>
-                        <th class="my_h2">NOME PASSEGGERO
-                            <div id="nome-passeggero"></div>
-                        </th>
-                        <th class="my_text">Offerta</th>
-                        <th class="my_text">Carrozza</th>
-                        <th class="my_text">Codice CP</th>
-                        <th class="my_text">Costo biglietto</th>
+                        <td></td>
+                        <td class="text-generated" id="offerta"></td>
+                        <td class="text-generated" id="carrozza"></td>
+                        <td class="text-generated" id="codice-cp"></td>
+                        <td class="text-generated" id="costo-biglietto"></td>
                     </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td></td>
-                    <td class="text-generated" id="offerta"></td>
-                    <td class="text-generated" id="carrozza"></td>
-                    <td class="text-generated" id="codice-cp"></td>
-                    <td class="text-generated" id="costo-biglietto"></td>
-                </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
